fix letter spacing

--- a/leaderboard/graphics/css/leaderboard/overlay_top_v2.css
+++ b/leaderboard/graphics/css/leaderboard/overlay_top_v2.css
@@ -127,7 +127,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     min-width: 180px;
-    letter-spacing: -2px;
+    letter-spacing: letter_spacing;
 }
 
 .leaderboard .athlete .name .initial {
